# german-anki-enricher

./: .gitignore  CLAUDE.md  README.md  add_card.py  added_words.txt  build_deck.py  cloze_30.txt  german-anki-enricher-notebook.ipynb  german_anki_generator.py  new_words.txt  new_words_full.txt  pyproject.toml  run_generator.py  sentence_30.txt  set_batch.py  words_source.md
.claude/commands/: add-word.md
.devcontainer/: Dockerfile  devcontainer.json
card_data/: ab_und_zu.json  aberglaube.json  absicht.json  abwechslung.json  angenehm.json  angst_haben.json  anker.json  anpassen.json  anrufen.json  anstrengend.json  arbeitskraft.json  atemzug.json  atmen.json  atmung.json  aubergine.json  auf_jeden_fall.json  aufhören.json  aufstellen.json  aufwachsen.json  ausblick.json  ausflug.json  ausgezeichnet.json  ausprobieren.json  austauschbar.json  auswirkung.json  bauen.json  bearbeiten.json  bedingung.json  befehl.json  befehlen.json  befreien.json  befürchten.json  begabt.json  beginnen.json  behandeln.json  benutzer.json  beobachten.json  beobachtung.json  bereich.json  bescheiden.json  (+333 more)
scripts/: _devcontainer_common.sh  run_claude_yolo.sh  shell.sh
tests/: conftest.py  test_generator.py  test_manual.py
